MtSharperest/MTS.Open/MTS.Engine.SDL/mts_sdl.interop.cs


		//creates a texture
		[DllImport("MTS.Engine.SDL.Native.dll", CallingConvention = CallingConvention.Cdecl)]
		public static extern MTS_SDL_Texture mts_sdl_Texture_Create(ref MTS_SDL_TextureDescr descr);

		//destroys a texture
		[DllImport("MTS.Engine.SDL.Native.dll", CallingConvention = CallingConvention.Cdecl)]
		public static extern void mts_sdl_Texture_Destroy(MTS_SDL_Texture tex);

		//creates a render target with the given dimensions
		//this is probably oversimplified
		[DllImport("MTS.Engine.SDL.Native.dll", CallingConvention = CallingConvention.Cdecl)]
		public static extern MTS_SDL_RenderTarget mts_sdl_RenderTarget_Create(int width, int height);

		//binds this render target as current
		[DllImport("MTS.Engine.SDL.Native.dll", CallingConvention = CallingConvention.Cdecl)]
		public static extern void mts_sdl_RenderTarget_Bind(MTS_SDL_RenderTarget rt);

		//destroys the given render target
		[DllImport("MTS.Engine.SDL.Native.dll", CallingConvention = CallingConvention.Cdecl)]
		public static extern void mts_sdl_RenderTarget_Destroy(MTS_SDL_RenderTarget rt);

		//creates a blend state object
		[DllImport("MTS.Engine.SDL.Native.dll", CallingConvention = CallingConvention.Cdecl)]
		public static extern MTS_SDL_BlendState mts_sdl_BlendState_Create(ref MTS_SDL_BlendStateDescr descr);

		//creates a depth stencil state object
		//NOTE: doing this with * is better because it enforces that the layout be blittable (we certainly don't want it to be marshaled)
		[DllImport("MTS.Engine.SDL.Native.dll", CallingConvention = CallingConvention.Cdecl)]
		public static unsafe extern MTS_SDL_DepthStencilState mts_sdl_DepthStencilState_Create(MTS_SDL_DepthStencilStateDescr *descr);

		[DllImport("MTS.Engine.SDL.Native.dll", CallingConvention = CallingConvention.Cdecl)]
		public static unsafe extern MTS_SDL_PolygonState mts_sdl_PolygonState_Create(MTS_SDL_PolygonStateDescr *descr);

		//destroys the given blend state object
		[DllImport("MTS.Engine.SDL.Native.dll", CallingConvention = CallingConvention.Cdecl)]
		public static extern void mts_sdl_BlendState_Destroy(MTS_SDL_BlendState blendState);

		//creates a sampler state object
		[DllImport("MTS.Engine.SDL.Native.dll", CallingConvention = CallingConvention.Cdecl)]
		public static extern MTS_SDL_SamplerState mts_sdl_SamplerState_Create(ref MTS_SDL_SamplerStateDescr descr);

		//destroys the given sampler state object
		[DllImport("MTS.Engine.SDL.Native.dll", CallingConvention = CallingConvention.Cdecl)]
		public static extern void mts_sdl_SamplerState_Destroy(MTS_SDL_SamplerState samplerState);

		//draws (equivalent of glDrawArrays)
		[DllImport("MTS.Engine.SDL.Native.dll", CallingConvention = CallingConvention.Cdecl)]
		public static extern void mts_sdl_Draw(MTS_SDL_PrimitiveType primitiveType, int startIndex, int nVertices);

		//binds the blend state object (target is usually 0)
		[DllImport("MTS.Engine.SDL.Native.dll", CallingConvention = CallingConvention.Cdecl)]
		public static extern void mts_sdl_Device_Bind_BlendState(int target, MTS_SDL_BlendState blendState);

		//binds the depth stencil state object
		[DllImport("MTS.Engine.SDL.Native.dll", CallingConvention = CallingConvention.Cdecl)]
		public static extern void mts_sdl_Device_Bind_DepthStencilState(MTS_SDL_DepthStencilState depthStencilState);

		//binds the polygon state object
		[DllImport("MTS.Engine.SDL.Native.dll", CallingConvention = CallingConvention.Cdecl)]
		public static extern void mts_sdl_Device_Bind_PolygonState(MTS_SDL_PolygonState polygonState);

		//sets the constant color on the blending unit 
		[DllImport("MTS.Engine.SDL.Native.dll", CallingConvention = CallingConvention.Cdecl)]
		public static extern void mts_sdl_Device_Bind_BlendState_Color(float[] rgba_array);

		//binds the dynamic vertex buffer. binds the entire thing (there is no provision for binding a range; control the range through your draw calls instead)
		//this binds its associated vertex layout as well
		[DllImport("MTS.Engine.SDL.Native.dll", CallingConvention = CallingConvention.Cdecl)]
		public static extern void mts_sdl_Device_Bind_DynamicVertexBuffer(MTS_SDL_DynamicVertexBuffer dvb);

		//binds the dynamic vertex buffer. binds the entire thing (there is no provision for binding a range; control the range through your draw calls instead)
		//this binds its associated vertex layout as well
		[DllImport("MTS.Engine.SDL.Native.dll", CallingConvention = CallingConvention.Cdecl)]
		public static extern void mts_sdl_Device_Bind_StaticVertexBuffer(MTS_SDL_StaticVertexBuffer svb);

		[DllImport("MTS.Engine.SDL.Native.dll", CallingConvention = CallingConvention.Cdecl)]
		public static extern void mts_sdl_Device_Bind_SamplerState(int target, MTS_SDL_SamplerState sampler);

		//Binds this vertex layout as current
		[DllImport("MTS.Engine.SDL.Native.dll", CallingConvention = CallingConvention.Cdecl)]
		public static extern void mts_sdl_Device_Bind_VertexLayout(MTS_SDL_VertexLayout layout);

		//Binds the backbuffer as current render target
		[DllImport("MTS.Engine.SDL.Native.dll", CallingConvention = CallingConvention.Cdecl)]
		public static extern void mts_sdl_Device_Bind_Backbuffer();

		//Binds this texture to the given texture unit
		[DllImport("MTS.Engine.SDL.Native.dll", CallingConvention = CallingConvention.Cdecl)]
		public static extern void mts_sdl_Device_Bind_Texture(int target, MTS_SDL_Texture tex);

		//Binds this render target's texture to the given texture unit
		[DllImport("MTS.Engine.SDL.Native.dll", CallingConvention = CallingConvention.Cdecl)]
		public static extern void mts_sdl_Device_Bind_TextureRT(int target, MTS_SDL_RenderTarget rt);

		//Sets device's current viewport
		[DllImport("MTS.Engine.SDL.Native.dll", CallingConvention = CallingConvention.Cdecl)]
		public static extern void mts_sdl_Device_SetViewport(int x, int y, int width, int height);

		//Sets device's current depth range
		[DllImport("MTS.Engine.SDL.Native.dll", CallingConvention = CallingConvention.Cdecl)]
		public static extern void mts_sdl_Device_SetDepthRange(float hither, float yon);

		//begins drawing for a frame.
		//chiefly, makes sure once-per-frame processes run, whatever they are
		[DllImport("MTS.Engine.SDL.Native.dll", CallingConvention = CallingConvention.Cdecl)]
		public static extern void mts_sdl_Device_BeginFrame();

		//clears the framebuffer
		[DllImport("MTS.Engine.SDL.Native.dll", CallingConvention = CallingConvention.Cdecl)]
		public static extern void mts_sdl_Device_Clear(ref MTS_SDL_ClearDescr descr);

		//ends frame and swaps buffers
		[DllImport("MTS.Engine.SDL.Native.dll", CallingConvention = CallingConvention.Cdecl)]
		public static extern void mts_sdl_Device_EndFrame();

		[DllImport("MTS.Engine.SDL.Native.dll", CallingConvention = CallingConvention.Cdecl)]
		public static extern void mts_sdl_Init();

		[DllImport("MTS.Engine.SDL.Native.dll", CallingConvention = CallingConvention.Cdecl)]
		public static extern void mts_sdl_Exit();
	}
}